Added user handlers
